fix(apache): Refactor directory structure for improved clarity.

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,19 @@ APACHE_PID_FILE=/var/run/apache2/apache2.pid
 APACHE_RUN_DIR=/var/run/apache2
 APACHE_RUN_GROUP=www-data
 APACHE_RUN_USER=www-data
-# Optional: Enable HTTP to HTTPS redirect
+# Apache MPM Event Configuration
+APACHE_ASYNC_REQUEST_WORKER_FACTOR=2
+APACHE_GRACEFUL_SHUTDOWN_TIMEOUT=10
+APACHE_SERVER_LIMIT=32
+APACHE_MAX_CONNECTIONS_PER_CHILD=5000
+APACHE_MAX_REQUEST_WORKERS=800
+APACHE_MAX_SPARE_THREADS=100
+APACHE_MIN_SPARE_THREADS=25
+APACHE_START_SERVERS=4
+APACHE_THREAD_LIMIT=64
+APACHE_THREADS_PER_CHILD=25
+APACHE_LISTEN_BACKLOG=511
+# Apache optional: Enable HTTP to HTTPS redirect
 APACHE_SSL_ENABLED=true
 APACHE_SSL_REDIRECT=false
 
