--- a/src/etc/apache2/apache2.conf
+++ b/src/etc/apache2/apache2.conf
@@ -29,7 +29,6 @@
 DefaultRuntimeDir ${APACHE_RUN_DIR}
 ErrorLog ${APACHE_ERROR_LOG_FILE}
 Group ${APACHE_RUN_GROUP}
-Listen 80
 Mutex file:${APACHE_LOCK_DIR} default
 PidFile ${APACHE_PID_FILE}
 ServerName localhost
@@ -57,6 +56,11 @@ User ${APACHE_RUN_USER}
 #------------------------------------------------------------------------------
 IncludeOptional mods-enabled/*.load
 IncludeOptional mods-enabled/*.conf
+
+#------------------------------------------------------------------------------
+# Load Ports Configuration
+#------------------------------------------------------------------------------
+Include ports.conf
 
 #------------------------------------------------------------------------------
 # Modular Configuration Includes (enabled via a2enconf)
