--- a/src/etc/apache2/conf-available/01-performance.conf
+++ b/src/etc/apache2/conf-available/01-performance.conf
@@ -1,6 +1,6 @@
 #==============================================================================
 # Performance Optimization Configuration
-# MPM, KeepAlive, HTTP/2 Settings
+# KeepAlive, HTTP/2
 #==============================================================================
 
 #------------------------------------------------------------------------------
@@ -38,38 +38,6 @@ Timeout 60
     # Security and compatibility
     H2ModernTLSOnly on
     H2Upgrade on
-</IfModule>
-
-#------------------------------------------------------------------------------
-# Memory and Resource Management
-# Prevent memory leaks and optimize resource usage
-#------------------------------------------------------------------------------
-<IfModule mpm_event_module>
-    # Graceful shutdowns
-    GracefulShutdownTimeout 10
-</IfModule>
-
-#------------------------------------------------------------------------------
-# MPM Event Configuration
-#------------------------------------------------------------------------------
-<IfModule mpm_event_module>
-    # Factor of 2 means each worker can handle 2x connections than threads
-    AsyncRequestWorkerFactor 2
-
-    # Set ServerLimit to accommodate MaxRequestWorkers
-    ServerLimit             32
-
-    # Calculated for 16GB server (adjust according to your RAM)
-    MaxConnectionsPerChild 5000
-    MaxRequestWorkers      800
-    MaxSpareThreads        100
-    MinSpareThreads         25
-    StartServers             4
-    ThreadLimit             64
-    ThreadsPerChild         25
-
-    # Listen queue optimization
-    ListenBackLog 511
 </IfModule>
 
 #------------------------------------------------------------------------------
