--- a/src/etc/apache2/conf-available/04-compression.conf
+++ b/src/etc/apache2/conf-available/04-compression.conf
@@ -3,7 +3,7 @@
 #==============================================================================
 
 #------------------------------------------------------------------------------
-# Brotli Compression (Primary)
+# Brotli Compression
 #------------------------------------------------------------------------------
 <IfModule mod_brotli.c>
     # Basic Brotli parameters
