--- a/src/etc/apache2/conf-available/vhost-common.conf
+++ b/src/etc/apache2/conf-available/vhost-common.conf
@@ -2,10 +2,22 @@
 # Common Virtual Host Configuration for Yii2
 #==============================================================================
 
+#------------------------------------------------------------------------------
+# Allow .well-known directory for Let's Encrypt
+#------------------------------------------------------------------------------
+<Directory /var/www/app/web/.well-known>
+    Require all granted
+</Directory>
+
+#------------------------------------------------------------------------------
+# Basic Settings
+#------------------------------------------------------------------------------
 ServerAdmin webmaster@localhost
 DocumentRoot ${APACHE_DOCUMENT_ROOT}
 
+#------------------------------------------------------------------------------
 # Directory configuration with enhanced security
+#------------------------------------------------------------------------------
 <Directory /var/www/app/web>
     Options -Indexes +FollowSymLinks
     AllowOverride All
@@ -54,22 +66,23 @@ DocumentRoot ${APACHE_DOCUMENT_ROOT}
     </FilesMatch>
 </Directory>
 
-# Allow .well-known directory for Let's Encrypt
-<Directory /var/www/app/web/.well-known>
-    Require all granted
-</Directory>
-
-# Protect sensitive directories and files
-<DirectoryMatch "/var/www/app/(runtime|vendor|tests|config|models|controllers|commands|migrations|mail|widgets)">
-    Require all denied
-</DirectoryMatch>
-
+#------------------------------------------------------------------------------
 # Enhanced protection for sensitive files
+#------------------------------------------------------------------------------
 <FilesMatch "^(composer\.(json|lock)|package\.(json|lock)|\.env.*|yii|yii\.bat|requirements\.php|web\.config|\.htaccess)$">
     Require all denied
 </FilesMatch>
 
+#------------------------------------------------------------------------------
+# Protect sensitive directories and files
+#------------------------------------------------------------------------------
+<DirectoryMatch "/var/www/app/(runtime|vendor|tests|config|models|controllers|commands|migrations|mail|widgets)">
+    Require all denied
+</DirectoryMatch>
+
+#------------------------------------------------------------------------------
 # Protect version control and CI/CD files
+#------------------------------------------------------------------------------
 <FilesMatch "^(\.git.*|\.gitlab-ci\.yml|\.github.*|Dockerfile.*|docker-compose.*|\.dockerignore)$">
     Require all denied
 </FilesMatch>
