--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,7 +72,7 @@ jobs:
       uses: docker/build-push-action@v6
       with:
         context: .
-        file: ./src/flavor/apache/Dockerfile
+        file: ./src/flavor/Dockerfile.apache
         push: false
         tags: ${{ steps.tags.outputs.TAG }}
         build-args: |
