--- a/src/flavor/Dockerfile.apache
+++ b/src/flavor/Dockerfile.apache
@@ -14,7 +14,6 @@ FROM php:${PHP_VERSION}-fpm-trixie AS base
 # Environment variables
 ENV DEBIAN_FRONTEND=noninteractive \
     # Apache Configuration
-    APACHE_ACCESS_LOG=/proc/self/fd/1 \
     APACHE_DOCUMENT_ROOT=/var/www/app/web \
     APACHE_ERROR_LOG_FILE=/proc/self/fd/2 \
     APACHE_LOCK_DIR=/var/lock/apache2 \
@@ -22,6 +21,21 @@ ENV DEBIAN_FRONTEND=noninteractive \
     APACHE_RUN_DIR=/var/run/apache2 \
     APACHE_RUN_GROUP=www-data \
     APACHE_RUN_USER=www-data \
+    # Apache MPM Event Configuration
+    APACHE_ASYNC_REQUEST_WORKER_FACTOR=2 \
+    APACHE_GRACEFUL_SHUTDOWN_TIMEOUT=10 \
+    APACHE_SERVER_LIMIT=32 \
+    APACHE_MAX_CONNECTIONS_PER_CHILD=5000 \
+    APACHE_MAX_REQUEST_WORKERS=800 \
+    APACHE_MAX_SPARE_THREADS=100 \
+    APACHE_MIN_SPARE_THREADS=25 \
+    APACHE_START_SERVERS=4 \
+    APACHE_THREAD_LIMIT=64 \
+    APACHE_THREADS_PER_CHILD=25 \
+    APACHE_LISTEN_BACKLOG=511 \
+    # Apache Logging Configuration
+    APACHE_ACCESS_LOG=/proc/self/fd/1 \
+    # Apache optional: Enable HTTP to HTTPS redirect
     APACHE_SSL_ENABLED=true \
     # GD configuration
     IPE_GD_WITHOUTAVIF=1 \
@@ -34,24 +48,24 @@ ENV DEBIAN_FRONTEND=noninteractive \
     PHP_POST_MAX_SIZE=50M \
     PHP_UPLOAD_MAX_FILESIZE=50M \
     # PHP Error Configuration
-    PHP_DISPLAY_ERRORS=off \
-    PHP_DISPLAY_STARTUP_ERRORS=off \
+    PHP_DISPLAY_ERRORS=0 \
+    PHP_DISPLAY_STARTUP_ERRORS=0 \
     PHP_ERROR_LOG=/proc/self/fd/2 \
     PHP_ERROR_REPORTING="E_ALL & ~E_DEPRECATED" \
-    PHP_EXPOSE=off \
-    PHP_LOG_ERRORS=on \
+    PHP_EXPOSE=0 \
+    PHP_LOG_ERRORS=1 \
     # PHP Security Configuration
-    PHP_ALLOW_URL_FOPEN=off \
-    PHP_ALLOW_URL_INCLUDE=off \
-    PHP_DATE_TIMEZONE=UTC \
-    PHP_DISABLE_FUNCTIONS=exec,passthru,shell_exec,system,proc_open,popen,parse_ini_file,show_source \
+    PHP_ALLOW_URL_FOPEN=0 \
+    PHP_ALLOW_URL_INCLUDE=0 \
+    PHP_DATE_TIMEZONE="UTC" \
+    PHP_DISABLE_FUNCTIONS="exec,passthru,shell_exec,system,proc_open,popen,parse_ini_file,show_source" \
     # PHP Session Configuration
     PHP_SESSION_HANDLER=files \
     PHP_SESSION_PATH=/var/lib/php/sessions \
     # PHP-FPM Configuration
     PHP_FPM_ACCESS_LOG=/proc/self/fd/1 \
     PHP_FPM_CATCH_OUTPUT=yes \
-    PHP_FPM_IDLE_TIMEOUT=10s \
+    PHP_FPM_IDLE_TIMEOUT="10s" \
     PHP_FPM_LOG_LEVEL=warning \
     PHP_FPM_MAX_CHILDREN=50 \
     PHP_FPM_MAX_REQUESTS=500 \
@@ -61,7 +75,7 @@ ENV DEBIAN_FRONTEND=noninteractive \
     PHP_FPM_PM=dynamic \
     PHP_FPM_REQUEST_TIMEOUT=30 \
     PHP_FPM_RLIMIT_FILES=131072 \
-    PHP_FPM_SLOWLOG_TIMEOUT=5s \
+    PHP_FPM_SLOWLOG_TIMEOUT="5s" \
     PHP_FPM_START_SERVERS=5 \
     PHP_FPM_STATUS_PATH=/fpm-status \
     # SSL Configuration
@@ -79,6 +93,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     ca-certificates \
     gnupg \
     && apt-get clean \
+    && rm -rf /etc/apache2/sites-enabled/000-default.conf \
     && rm -rf /var/lib/apt/lists/*
 
 # Layer 2: Install Node.js for asset building
@@ -228,16 +243,11 @@ ENV BUILD_TYPE=${BUILD_TYPE} \
     SERVICE_TYPE=apache-fpm
 
 # Layer 17: Copy Apache configuration files
-COPY src/flavor/apache/etc/apache2.conf /etc/apache2/
-COPY src/flavor/apache/etc/conf-available/ /etc/apache2/conf-available/
-COPY src/flavor/apache/etc/sites-available/ /etc/apache2/sites-available/
-COPY src/flavor/apache/etc/ssl/ /etc/apache2/ssl/
+COPY src/etc/apache2/ /etc/apache2/
 
 # Layer 18: Copy PHP Configurations
-COPY src/php-fpm/docker.conf /usr/local/etc/php-fpm.d/zz-docker.conf
-COPY src/php/ /tmp/php/
-RUN cp "/tmp/php/${BUILD_TYPE}.ini" /usr/local/etc/php/conf.d/99-app.ini \
-    && rm -rf /tmp/php
+COPY src/etc/php-fpm.d/ /usr/local/etc/php-fpm.d/
+COPY src/etc/php/${BUILD_TYPE}.ini /usr/local/etc/php/conf.d/99-app.ini
 
 # Layer 19: Copy Supervisor configurations
 COPY src/supervisor/conf.d/ /etc/supervisor/conf.d/
@@ -255,8 +265,7 @@ RUN a2enconf \
     04-compression.conf \
     05-php-fpm.conf \
     06-logging.conf \
-    07-rate-limiting.conf \
-    && a2dissite 000-default 2>/dev/null || true
+    07-rate-limiting.conf
 
 # Layer 22: Make scripts executable
 RUN chmod +x /usr/local/bin/entrypoint
