fix(apache): Update Brotli compression settings and reorganize Vary header configuration for clarity.

--- a/src/etc/apache2/conf-available/04-compression.conf
+++ b/src/etc/apache2/conf-available/04-compression.conf
@@ -6,6 +6,9 @@
 # Brotli Compression
 #------------------------------------------------------------------------------
 <IfModule mod_brotli.c>
+    # Force Brotli for specific file types
+    SetEnv no-gzip 1
+
     # Basic Brotli parameters
     BrotliCompressionMaxInputBlock 16
     BrotliCompressionQuality 6
@@ -19,7 +22,6 @@
         text/css \
         text/javascript \
         application/javascript \
-        application/x-javascript \
         application/json \
         application/xml \
         application/xhtml+xml \
@@ -29,11 +31,6 @@
     SetEnvIfNoCase Request_URI \
         \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|br|rar|bz2|7z|tar)$ \
         no-brotli
-
-    # Set proper Vary header
-    <IfModule mod_headers.c>
-        Header merge Vary "Accept-Encoding"
-    </IfModule>
 </IfModule>
 
 #------------------------------------------------------------------------------
@@ -53,7 +50,6 @@
             text/css \
             text/javascript \
             application/javascript \
-            application/x-javascript \
             application/json \
             application/xml \
             application/xhtml+xml \
@@ -63,12 +59,14 @@
         SetEnvIfNoCase Request_URI \
             \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|br|rar|bz2|7z|tar)$ \
             no-gzip
-
-        # Set proper Vary header
-        <IfModule mod_headers.c>
-            Header merge Vary "Accept-Encoding"
-        </IfModule>
     </IfModule>
+</IfModule>
+
+#------------------------------------------------------------------------------
+# Shared Settings
+#------------------------------------------------------------------------------
+<IfModule mod_headers.c>
+    Header merge Vary "Accept-Encoding"
 </IfModule>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
