--- a/src/etc/apache2/conf-available/04-compression.conf
+++ b/src/etc/apache2/conf-available/04-compression.conf
@@ -6,31 +6,43 @@
 # Brotli Compression
 #------------------------------------------------------------------------------
 <IfModule mod_brotli.c>
-    # Force Brotli for specific file types
-    SetEnv no-gzip 1
-
     # Basic Brotli parameters
+    BrotliAlterETag AddSuffix
     BrotliCompressionMaxInputBlock 16
     BrotliCompressionQuality 6
     BrotliCompressionWindow 18
 
     # Apply Brotli to common web content types
     AddOutputFilterByType BROTLI_COMPRESS \
-        text/html \
-        text/plain \
-        text/xml \
-        text/css \
-        text/javascript \
+        application/atom+xml \
         application/javascript \
         application/json \
-        application/xml \
+        application/ld+json \
+        application/manifest+json \
+        application/vnd.ms-fontobject \
+        application/x-font-ttf \
+        application/x-web-app-manifest+json \
         application/xhtml+xml \
-        image/svg+xml
+        application/xml \
+        application/xml+rss \
+        font/opentype \
+        image/svg+xml \
+        image/x-icon \
+        text/cache-manifest \
+        text/css \
+        text/html \
+        text/javascript \
+        text/plain \
+        text/vtt \
+        text/xml
 
     # Don't compress already compressed files
     SetEnvIfNoCase Request_URI \
-        \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|br|rar|bz2|7z|tar)$ \
+        \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|br|rar|bz2|7z|tar|pdf|mp[34]|avi|mov|wmv|flv)$ \
         no-brotli
+
+    # Disable gzip if Brotli is active
+    SetEnv no-gzip 1
 </IfModule>
 
 #------------------------------------------------------------------------------
@@ -40,24 +52,38 @@
     # Only use gzip if Brotli module is not available
     <IfModule !mod_brotli.c>
         # Basic deflate parameters
+        DeflateAlterETag AddSuffix
+        DeflateBufferSize 8096
         DeflateCompressionLevel 6
+        DeflateWindowSize 15
 
         # Apply to same content types as Brotli
         AddOutputFilterByType DEFLATE \
-            text/html \
-            text/plain \
-            text/xml \
-            text/css \
-            text/javascript \
+            application/atom+xml \
             application/javascript \
             application/json \
-            application/xml \
+            application/ld+json \
+            application/manifest+json \
+            application/vnd.ms-fontobject \
+            application/x-font-ttf \
+            application/x-web-app-manifest+json \
             application/xhtml+xml \
-            image/svg+xml
+            application/xml \
+            application/xml+rss \
+            font/opentype \
+            image/svg+xml \
+            image/x-icon \
+            text/cache-manifest \
+            text/css \
+            text/html \
+            text/javascript \
+            text/plain \
+            text/vtt \
+            text/xml
 
         # Don't compress already compressed files
         SetEnvIfNoCase Request_URI \
-            \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|br|rar|bz2|7z|tar)$ \
+            \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|br|rar|bz2|7z|tar|pdf|mp[34]|avi|mov|wmv|flv)$ \
             no-gzip
     </IfModule>
 </IfModule>
@@ -65,6 +91,7 @@
 #------------------------------------------------------------------------------
 # Shared Settings
 #------------------------------------------------------------------------------
+# Headers for compression and caching
 <IfModule mod_headers.c>
     Header merge Vary "Accept-Encoding"
 </IfModule>
