--- a/src/etc/apache2/conf-available/04-compression.conf
+++ b/src/etc/apache2/conf-available/04-compression.conf
@@ -19,12 +19,12 @@
         application/json \
         application/ld+json \
         application/manifest+json \
+        application/rss+xml \
         application/vnd.ms-fontobject \
         application/x-font-ttf \
         application/x-web-app-manifest+json \
         application/xhtml+xml \
         application/xml \
-        application/xml+rss \
         font/opentype \
         image/svg+xml \
         image/x-icon \
@@ -64,12 +64,12 @@
             application/json \
             application/ld+json \
             application/manifest+json \
+            application/rss+xml \
             application/vnd.ms-fontobject \
             application/x-font-ttf \
             application/x-web-app-manifest+json \
             application/xhtml+xml \
             application/xml \
-            application/xml+rss \
             font/opentype \
             image/svg+xml \
             image/x-icon \
