--- a/src/etc/apache2/conf-available/04-compression.conf
+++ b/src/etc/apache2/conf-available/04-compression.conf
@@ -40,52 +40,51 @@
     SetEnvIfNoCase Request_URI \
         \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|br|rar|bz2|7z|tar|pdf|mp[34]|avi|mov|wmv|flv)$ \
         no-brotli
-
-    # Disable gzip if Brotli is active
-    SetEnv no-gzip 1
 </IfModule>
 
 #------------------------------------------------------------------------------
 # Gzip Compression (Fallback)
 #------------------------------------------------------------------------------
 <IfModule mod_deflate.c>
-    # Only use gzip if Brotli module is not available
-    <IfModule !mod_brotli.c>
-        # Basic deflate parameters
-        DeflateAlterETag AddSuffix
-        DeflateBufferSize 8096
-        DeflateCompressionLevel 6
-        DeflateWindowSize 15
-
-        # Apply to same content types as Brotli
-        AddOutputFilterByType DEFLATE \
-            application/atom+xml \
-            application/javascript \
-            application/json \
-            application/ld+json \
-            application/manifest+json \
-            application/rss+xml \
-            application/vnd.ms-fontobject \
-            application/x-font-ttf \
-            application/x-web-app-manifest+json \
-            application/xhtml+xml \
-            application/xml \
-            font/opentype \
-            image/svg+xml \
-            image/x-icon \
-            text/cache-manifest \
-            text/css \
-            text/html \
-            text/javascript \
-            text/plain \
-            text/vtt \
-            text/xml
-
-        # Don't compress already compressed files
-        SetEnvIfNoCase Request_URI \
-            \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|br|rar|bz2|7z|tar|pdf|mp[34]|avi|mov|wmv|flv)$ \
-            no-gzip
+    # Prefer Brotli when client supports it; otherwise gzip as fallback
+    <IfModule mod_setenvif.c>
+        SetEnvIfExpr "req('Accept-Encoding') =~ /br/" no-gzip
     </IfModule>
+
+    # Basic deflate parameters
+    DeflateAlterETag AddSuffix
+    DeflateBufferSize 8096
+    DeflateCompressionLevel 6
+    DeflateWindowSize 15
+
+    # Apply to same content types as Brotli
+    AddOutputFilterByType DEFLATE \
+        application/atom+xml \
+        application/javascript \
+        application/json \
+        application/ld+json \
+        application/manifest+json \
+        application/rss+xml \
+        application/vnd.ms-fontobject \
+        application/x-font-ttf \
+        application/x-web-app-manifest+json \
+        application/xhtml+xml \
+        application/xml \
+        font/opentype \
+        image/svg+xml \
+        image/x-icon \
+        text/cache-manifest \
+        text/css \
+        text/html \
+        text/javascript \
+        text/plain \
+        text/vtt \
+        text/xml
+
+    # Don't compress already compressed files
+    SetEnvIfNoCase Request_URI \
+        \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|br|rar|bz2|7z|tar|pdf|mp[34]|avi|mov|wmv|flv)$ \
+        no-gzip
 </IfModule>
 
 #------------------------------------------------------------------------------
