Apply fixed review coderabbitai nitpick comments.

--- a/src/etc/apache2/conf-available/04-compression.conf
+++ b/src/etc/apache2/conf-available/04-compression.conf
@@ -21,6 +21,7 @@
         application/manifest+json \
         application/rss+xml \
         application/vnd.ms-fontobject \
+        application/wasm \
         application/x-font-ttf \
         application/x-web-app-manifest+json \
         application/xhtml+xml \
@@ -38,8 +39,11 @@
 
     # Don't compress already compressed files
     SetEnvIfNoCase Request_URI \
-        \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|br|rar|bz2|7z|tar|pdf|mp[34]|avi|mov|wmv|flv)$ \
+        \.(?:gif|jpe?g|png|webp|avif|jxl|heic|heif|woff2?|ico|zip|gz|br|zst|xz|rar|bz2|7z|tar|pdf|mp[34]|avi|mov|wmv|flv|webm|mkv|svgz)$ \
         no-brotli
+
+    # Exclude EventStream responses from compression
+    SetEnvIfNoCase Content-Type "^text/event-stream" no-brotli
 </IfModule>
 
 #------------------------------------------------------------------------------
@@ -66,6 +70,7 @@
         application/manifest+json \
         application/rss+xml \
         application/vnd.ms-fontobject \
+        application/wasm \
         application/x-font-ttf \
         application/x-web-app-manifest+json \
         application/xhtml+xml \
@@ -83,8 +88,11 @@
 
     # Don't compress already compressed files
     SetEnvIfNoCase Request_URI \
-        \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|br|rar|bz2|7z|tar|pdf|mp[34]|avi|mov|wmv|flv)$ \
+        \.(?:gif|jpe?g|png|webp|avif|jxl|heic|heif|woff2?|ico|zip|gz|br|zst|xz|rar|bz2|7z|tar|pdf|mp[34]|avi|mov|wmv|flv|webm|mkv|svgz)$ \
         no-gzip
+
+    # Exclude EventStream responses from compression
+    SetEnvIfNoCase Content-Type "^text/event-stream" no-gzip
 </IfModule>
 
 #------------------------------------------------------------------------------
@@ -92,7 +100,7 @@
 #------------------------------------------------------------------------------
 # Headers for compression and caching
 <IfModule mod_headers.c>
-    Header merge Vary "Accept-Encoding"
+    Header always merge Vary "Accept-Encoding"
 </IfModule>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
