fix(apache): Improve Brotli and Gzip compression settings for enhanced performance and compatibility. (#19)

--- a/src/etc/apache2/conf-available/04-compression.conf
+++ b/src/etc/apache2/conf-available/04-compression.conf
@@ -6,67 +6,99 @@
 # Brotli Compression
 #------------------------------------------------------------------------------
 <IfModule mod_brotli.c>
-    # Force Brotli for specific file types
-    SetEnv no-gzip 1
-
     # Basic Brotli parameters
+    BrotliAlterETag AddSuffix
     BrotliCompressionMaxInputBlock 16
     BrotliCompressionQuality 6
     BrotliCompressionWindow 18
 
     # Apply Brotli to common web content types
     AddOutputFilterByType BROTLI_COMPRESS \
-        text/html \
-        text/plain \
-        text/xml \
-        text/css \
-        text/javascript \
+        application/atom+xml \
         application/javascript \
         application/json \
-        application/xml \
+        application/ld+json \
+        application/manifest+json \
+        application/rss+xml \
+        application/vnd.ms-fontobject \
+        application/wasm \
+        application/x-font-ttf \
+        application/x-web-app-manifest+json \
         application/xhtml+xml \
-        image/svg+xml
+        application/xml \
+        font/opentype \
+        image/svg+xml \
+        text/cache-manifest \
+        text/css \
+        text/html \
+        text/javascript \
+        text/plain \
+        text/vtt \
+        text/xml
 
     # Don't compress already compressed files
     SetEnvIfNoCase Request_URI \
-        \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|br|rar|bz2|7z|tar)$ \
+        \.(?:gif|jpe?g|png|webp|avif|jxl|heic|heif|woff2?|ico|zip|gz|br|zst|xz|rar|bz2|7z|tar|pdf|mp[34]|avi|mov|wmv|flv|webm|mkv|svgz)$ \
         no-brotli
+
+    # Exclude EventStream responses from compression
+    SetEnvIfNoCase Content-Type "^text/event-stream" no-brotli
 </IfModule>
 
 #------------------------------------------------------------------------------
 # Gzip Compression (Fallback)
 #------------------------------------------------------------------------------
 <IfModule mod_deflate.c>
-    # Only use gzip if Brotli module is not available
-    <IfModule !mod_brotli.c>
-        # Basic deflate parameters
-        DeflateCompressionLevel 6
-
-        # Apply to same content types as Brotli
-        AddOutputFilterByType DEFLATE \
-            text/html \
-            text/plain \
-            text/xml \
-            text/css \
-            text/javascript \
-            application/javascript \
-            application/json \
-            application/xml \
-            application/xhtml+xml \
-            image/svg+xml
-
-        # Don't compress already compressed files
-        SetEnvIfNoCase Request_URI \
-            \.(?:gif|jpe?g|png|webp|woff2?|ico|zip|gz|br|rar|bz2|7z|tar)$ \
-            no-gzip
+    # Prefer Brotli when client supports it; otherwise gzip as fallback
+    <IfModule mod_setenvif.c>
+        SetEnvIfExpr "req('Accept-Encoding') =~ /br/" no-gzip
     </IfModule>
+
+    # Basic deflate parameters
+    DeflateAlterETag AddSuffix
+    DeflateBufferSize 8096
+    DeflateCompressionLevel 6
+    DeflateWindowSize 15
+
+    # Apply to same content types as Brotli
+    AddOutputFilterByType DEFLATE \
+        application/atom+xml \
+        application/javascript \
+        application/json \
+        application/ld+json \
+        application/manifest+json \
+        application/rss+xml \
+        application/vnd.ms-fontobject \
+        application/wasm \
+        application/x-font-ttf \
+        application/x-web-app-manifest+json \
+        application/xhtml+xml \
+        application/xml \
+        font/opentype \
+        image/svg+xml \
+        text/cache-manifest \
+        text/css \
+        text/html \
+        text/javascript \
+        text/plain \
+        text/vtt \
+        text/xml
+
+    # Don't compress already compressed files
+    SetEnvIfNoCase Request_URI \
+        \.(?:gif|jpe?g|png|webp|avif|jxl|heic|heif|woff2?|ico|zip|gz|br|zst|xz|rar|bz2|7z|tar|pdf|mp[34]|avi|mov|wmv|flv|webm|mkv|svgz)$ \
+        no-gzip
+
+    # Exclude EventStream responses from compression
+    SetEnvIfNoCase Content-Type "^text/event-stream" no-gzip
 </IfModule>
 
 #------------------------------------------------------------------------------
 # Shared Settings
 #------------------------------------------------------------------------------
+# Headers for compression and caching
 <IfModule mod_headers.c>
-    Header merge Vary "Accept-Encoding"
+    Header always merge Vary "Accept-Encoding"
 </IfModule>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
